--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@
             body * { visibility: hidden; }
             .print-area, .print-area * { visibility: visible; }
             
-            /* Reset parent modal styles to prevent layout constraints */
             #invoice-modal {
                 position: static !important;
                 display: block !important;
@@ -76,11 +75,16 @@
                 padding: 0 !important;
             }
 
+            #invoice-form {
+                max-height: none !important;
+                overflow: visible !important;
+            }
+
             .print-area { 
                 position: static !important;
                 width: auto;
                 margin: 0;
-                padding: 2rem; /* Add padding for margins */
+                padding: 2rem;
                 border: none !important;
                 box-shadow: none !important;
             }
@@ -123,7 +127,7 @@
         <!-- ===== 左側邊欄 ===== -->
         <aside class="w-64 flex-shrink-0 bg-white border-r border-slate-200 flex flex-col no-print">
             <div class="h-28 flex flex-col items-center justify-center border-b border-slate-200 p-4">
-                <img src="https://i.ibb.co/7jWd7b4/logo.jpg" alt="威爾設計工作室 LOGO" class="w-16 h-16 rounded-full mb-2">
+                <img src="https://i.ibb.co/XkLLXCx5/3.png" alt="威爾設計工作室 LOGO" class="w-16 h-16 rounded-full mb-2">
                 <span class="text-lg font-bold text-slate-700">威爾設計</span>
             </div>
             <nav id="main-nav" class="flex-1 px-4 py-6 space-y-2">
@@ -251,7 +255,7 @@
                 <div class="hidden print:block mb-8 px-6 pt-6">
                     <div class="flex justify-between items-start">
                         <div class="flex items-center gap-4">
-                            <img src="https://i.ibb.co/7jWd7b4/logo.jpg" alt="威爾設計工作室 LOGO" class="w-16 h-16">
+                            <img src="https://i.ibb.co/XkLLXCx5/3.png" alt="威爾設計工作室 LOGO" class="w-16 h-16">
                             <div>
                                 <h1 class="text-2xl font-bold">威爾設計工作室</h1>
                                 <p class="text-sm">統一編號: 12345678</p>
