--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
         <!-- ===== 左側邊欄 ===== -->
         <aside class="w-64 flex-shrink-0 bg-white border-r border-slate-200 flex flex-col no-print">
             <div class="h-28 flex flex-col items-center justify-center border-b border-slate-200 p-4">
-                <img src="https://i.ibb.co/XkLLXCx5/3.png" alt="威爾設計工作室 LOGO" class="w-20 h-20 rounded-full mb-2">
-                <span class="text-lg font-bold text-slate-700">威爾設計</span>
+                <img src="https://i.ibb.co/XkLLXCx5/3.png" alt="威爾設計工作室 LOGO" class="w-24 h-24 rounded-full mb-2">
+                <span class="text-lg font-bold text-slate-700">Well Design</span>
             </div>
             <nav id="main-nav" class="flex-1 px-4 py-6 space-y-2">
                 <a href="#" data-target="dashboard-content" class="nav-link flex items-center px-4 py-2.5 text-sm font-medium rounded-lg"><svg class="w-5 h-5 mr-3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m3 9 9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/><polyline points="9 22 9 12 15 12 15 22"/></svg>儀表板</a>
