--- a/index.html
+++ b/index.html
@@ -258,8 +258,8 @@
                             <img src="https://i.ibb.co/XkLLXCx5/3.png" alt="威爾設計工作室 LOGO" class="w-16 h-16">
                             <div>
                                 <h1 class="text-2xl font-bold">威爾設計工作室</h1>
-                                <p class="text-sm">統一編號: 12345678</p>
-                                <p class="text-sm">聯絡電話: (04) 123-4567</p>
+                                <p class="text-sm">統一編號: 95308628</p>
+                                <p class="text-sm">聯絡電話: 0988328785</p>
                             </div>
                         </div>
                         <h2 class="text-3xl font-bold text-slate-600">請款單</h2>
