--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                 <div class="hidden print:block mb-8 px-6 pt-6">
                     <div class="flex justify-between items-start">
                         <div class="flex items-center gap-4">
-                            <img src="https://i.ibb.co/XkLLXCx5/3.png" alt="威爾設計工作室 LOGO" class="w-16 h-16">
+                            <img src="https://i.ibb.co/XkLLXCx5/3.png" alt="威爾設計工作室 LOGO" class="w-25 h-25">
                             <div>
                                 <h1 class="text-2xl font-bold">威爾設計工作室</h1>
                                 <p class="text-sm">統一編號: 95308628</p>
@@ -354,9 +354,9 @@
                          <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                             <div>
                                 <label for="invoicePaymentInfo" class="block text-sm font-medium text-slate-700 mb-1">付款資訊</label>
-                                <textarea id="invoicePaymentInfo" rows="4" class="mt-1 block w-full px-3 py-2 bg-white border border-slate-300 rounded-md shadow-sm focus:outline-none focus:ring-wine-500 focus:border-wine-500 text-sm">銀行名稱: 玉山銀行 (808)
-戶名: 威爾設計工作室
-帳號: 1234-5678-9012-3456</textarea>
+                                <textarea id="invoicePaymentInfo" rows="4" class="mt-1 block w-full px-3 py-2 bg-white border border-slate-300 rounded-md shadow-sm focus:outline-none focus:ring-wine-500 focus:border-wine-500 text-sm">銀行名稱: 中國信託商業銀行 (822)
+戶名: 張偉信
+帳號: 4285-4054-5571</textarea>
                             </div>
                             <div>
                                 <label for="invoiceNotes" class="block text-sm font-medium text-slate-700 mb-1">備註</label>
